--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 	},
 	"devDependencies": {
 		"@smui/banner": "^6.0.0-beta.16",
-		"@smui/button": "^6.0.0-beta.16",
+		"@smui/button": "^6.0.0",
 		"@smui/common": "^6.0.0-beta.16",
 		"@smui/drawer": "^6.0.0-beta.16",
 		"@smui/icon-button": "^6.0.0-beta.16",
