CircularProgress. Fixed Search bugs.

--- a/package.json
+++ b/package.json
@@ -19,41 +19,42 @@
 		"smui-dark": "smui-theme compile static/smui-dark.css -i src/theme/dark"
 	},
 	"devDependencies": {
-		"@smui/banner": "^6.0.0-beta.16",
+		"@smui/banner": "^6.0.0",
 		"@smui/button": "^6.0.0",
-		"@smui/common": "^6.0.0-beta.16",
-		"@smui/drawer": "^6.0.0-beta.16",
-		"@smui/icon-button": "^6.0.0-beta.16",
-		"@smui/list": "^6.0.0-beta.16",
-		"@smui/menu": "^6.0.0-beta.16",
-		"@smui/snackbar": "^6.0.0-beta.16",
-		"@smui/textfield": "^6.0.0-beta.16",
-		"@smui/tooltip": "^6.0.0-beta.16",
-		"@smui/top-app-bar": "^6.0.0-beta.16",
-		"@sveltejs/adapter-static": "^1.0.0-next.34",
+		"@smui/circular-progress": "^6.0.0",
+		"@smui/common": "^6.0.0",
+		"@smui/drawer": "^6.0.0",
+		"@smui/icon-button": "^6.0.0",
+		"@smui/list": "^6.0.0",
+		"@smui/menu": "^6.0.0",
+		"@smui/snackbar": "^6.0.0",
+		"@smui/textfield": "^6.0.0",
+		"@smui/tooltip": "^6.0.0",
+		"@smui/top-app-bar": "^6.0.0",
+		"@sveltejs/adapter-static": "^1.0.0-next.38",
 		"@sveltejs/kit": "next",
-		"@typescript-eslint/eslint-plugin": "^5.26.0",
-		"@typescript-eslint/parser": "^5.26.0",
+		"@typescript-eslint/eslint-plugin": "^5.31.0",
+		"@typescript-eslint/parser": "^5.31.0",
 		"dotenv": "^16.0.1",
-		"eslint": "^8.16.0",
+		"eslint": "^8.20.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"fomantic-ui": "^2.8.8",
 		"gh-pages": "^4.0.0",
 		"lodash": "^4.17.21",
-		"mongodb": "^4.6.0",
-		"prettier": "^2.6.2",
+		"mongodb": "^4.8.1",
+		"prettier": "^2.7.1",
 		"prettier-plugin-svelte": "^2.7.0",
-		"sass": "^1.52.1",
-		"smui-theme": "^6.0.0-beta.16",
-		"svelte": "^3.48.0",
+		"sass": "^1.54.0",
+		"smui-theme": "^6.0.0",
+		"svelte": "^3.49.0",
 		"svelte-carousel": "^1.0.19",
-		"svelte-check": "^2.7.1",
+		"svelte-check": "^2.8.0",
 		"svelte-device-detector": "^0.2.2",
 		"svelte-preprocess": "^4.10.7",
-		"svelte-typeahead": "^4.2.2",
+		"svelte-typeahead": "^4.2.4",
 		"tslib": "^2.4.0",
-		"typescript": "^4.7.2",
+		"typescript": "^4.7.4",
 		"uuid": "^8.3.2"
 	}
 }
