--- a/package.json
+++ b/package.json
@@ -21,13 +21,16 @@
 	"devDependencies": {
 		"@smui/banner": "^6.0.0",
 		"@smui/button": "^6.0.0",
+		"@smui/checkbox": "^6.0.0",
 		"@smui/circular-progress": "^6.0.0",
 		"@smui/common": "^6.0.0",
 		"@smui/drawer": "^6.0.0",
+		"@smui/form-field": "^6.0.0",
 		"@smui/icon-button": "^6.0.0",
 		"@smui/list": "^6.0.0",
 		"@smui/menu": "^6.0.0",
 		"@smui/snackbar": "^6.0.0",
+		"@smui/switch": "^6.0.0",
 		"@smui/textfield": "^6.0.0",
 		"@smui/tooltip": "^6.0.0",
 		"@smui/top-app-bar": "^6.0.0",
