--- a/package.json
+++ b/package.json
@@ -6,17 +6,24 @@
 	"repository": "https://github.com/zeddrix/jw-guitar-tabs_svelte-web",
 	"type": "module",
 	"scripts": {
-		"dev": "svelte-kit dev -p 3030",
-		"build": "npm run prepare && rm -rf build && svelte-kit build --verbose && touch build/.nojekyll",
+		"dev": "vite dev",
+		"build": "npm run prepare && rm -rf build && vite build && touch build/.nojekyll",
 		"deploy": "npm run build && npx gh-pages -d build -t true",
-		"preview": "svelte-kit preview -p 3030",
+		"preview": "vite preview",
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
 		"prepare": "npm run smui-light && npm run smui-dark",
 		"smui-light": "smui-theme compile static/smui.css -i src/theme",
-		"smui-dark": "smui-theme compile static/smui-dark.css -i src/theme/dark"
+		"smui-dark": "smui-theme compile static/smui-dark.css -i src/theme/dark",
+		"preinstall": "npx npm-force-resolutions"
+	},
+	"resolutions": {
+		"glob-parent": "^6.0.1",
+		"diff": "^3.5.0",
+		"postcss": "^7.0.36",
+		"node-notifier": "^8.0.1"
 	},
 	"devDependencies": {
 		"@smui/banner": "^6.0.0",
@@ -36,10 +43,10 @@
 		"@smui/top-app-bar": "^6.0.0",
 		"@sveltejs/adapter-static": "^1.0.0-next.38",
 		"@sveltejs/kit": "next",
-		"@typescript-eslint/eslint-plugin": "^5.31.0",
-		"@typescript-eslint/parser": "^5.31.0",
+		"@typescript-eslint/eslint-plugin": "^5.32.0",
+		"@typescript-eslint/parser": "^5.32.0",
 		"dotenv": "^16.0.1",
-		"eslint": "^8.20.0",
+		"eslint": "^8.21.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"fomantic-ui": "^2.8.8",
@@ -58,6 +65,7 @@
 		"svelte-typeahead": "^4.2.4",
 		"tslib": "^2.4.0",
 		"typescript": "^4.7.4",
-		"uuid": "^8.3.2"
+		"uuid": "^8.3.2",
+		"vite": "^3.0.4"
 	}
 }
